@@ -1,3 +1,9 @@
+Mon Jul 10 00:38:11 CEST 2006  Guillaume Desmottes <cass@skynet.be>
+	
+	* src/fe-gnome/navigation-tree.c:
+	  - Code cleaning to fix a crash when adding the first autojoin
+	    channel.
+
 Sun Jul  9 22:38:36 CEST 2006  Guillaume Desmottes <cass@skynet.be>
 
 	* src/fe-gnome/conversation-panel.c:
